--- a/SV/appsettings.Development.json
+++ b/SV/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "conexion": "server=CAMILAGOMEZ5ABF\\SQLEXPRESS; database=InscripcionesBrDb; integrated security=true; encrypt=false;"
   }
 }
