--- a/SV/SV.csproj
+++ b/SV/SV.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\js\multiowner.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\js\multiowner.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.4">
       <PrivateAssets>all</PrivateAssets>
@@ -17,6 +25,10 @@
 
   <ItemGroup>
     <Folder Include="NewFolder1\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\js\multiowner.js" />
   </ItemGroup>
 
 </Project>
