--- a/SV/appsettings.Development.json
+++ b/SV/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "conexion": "server=CAMILAGOMEZ5ABF\\SQLEXPRESS; database=InscripcionesBrDb; integrated security=true; encrypt=false;"
+    "conexion": "server=DESKTOP-BBTPGGA\\SQLEXPRESS; database=InscripcionesBrDb; integrated security=true; encrypt=false;"
   }
 }
